tests/ui/repeat-derive.stderr
error: the Debug trait is already implemented by the const_table macro
 --> $DIR/repeat-derive.rs:4:10
  |
4 | #[derive(Debug)]
  |          ^^^^^
